# webinar_axumcrud

./: Cargo.toml
src/: db.rs  main.rs  rest.rs  view.rs
