[package]
name = "webinar_axumcrud"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
anyhow = "1.0.97"
dotenv = "0.15.0"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["runtime-tokio", "sqlite"] }
axum = "0.8.3"
once_cell = "1.21.3"

[dev-dependencies]
axum-test-helper = "0.4.0"
